# ba_remeshing_mirror

./: .clang-format  .clangd  .gitignore  .polyscope.ini  CMakeLists.txt  README.md  imgui.ini
config/: plot_presets.csv
data/: bout.stl
data/cad/: bas.stl
include/: remesher.h
include/core/: geo_utils.h  types.h
include/io/: logger.h  paraview.h  plot.h
include/remesher/: evaluation_strategy.h  loss.h  phase_based_remesher.h  remesher.h  remesher_base.h  remesher_prio_global.h  remesher_prio_local.h  remesher_standard.h
include/remesher/remeshers/: remesher_prio_global.h  remesher_prio_local.h  remesher_standard.h
include/remesher/strategies/: split_avg.h  split_max.h  standard_loss_evaluation.h
include/ui/: app_viewer.h  visuals.h
scripts/: plot_metrics.py
src/: main.cpp  remesher.cpp
src/core/: geo_utils.cpp
src/io/: logger.cpp  paraview.cpp  plot.cpp
src/remesher/: evaluation_strategy.cpp  loss.cpp  remesher.cpp  remesher_base.cpp  remesher_prio_global.cpp  remesher_prio_local.cpp  remesher_standard.cpp
src/remesher/remeshers/: remesher_prio_global.cpp  remesher_prio_local.cpp  remesher_standard.cpp
src/remesher/strategies/: split_avg.cpp  split_max.cpp
src/ui/: app_viewer.cpp  visuals.cpp
tests/: remesher_tests.cpp
